home about changed

--- a/aboutus.html
+++ b/aboutus.html
@@ -36,15 +36,7 @@
     <!-- Start Navigation -->
     <nav class="navbar navbar-default bg-dark text-light navbar-sticky bootsnav">
 
-        <div class="container-fluid">
-
-            <!-- Start Atribute Navigation -->
-            <div class="attr-nav">
-                <ul>
-                    <li class="button"><a href="#">Login <i class="fas fa-arrow-right"></i></a></li>
-                </ul>
-            </div>
-            <!-- End Atribute Navigation -->
+        <div class="container-fluid pr-4" style="border-bottom: 4px solid white;">
 
             <!-- Start Header Navigation -->
             <div class="navbar-header">
@@ -123,7 +115,7 @@
                     <div class="row">
 
 
-                        <div class="col-lg-8">
+                        <div class="col-12">
                             <h2>Overview</h2>
                             <p class="text-justify">
                                 S L B I GROUP has become the largest Industrial Campus, Courses &amp; Trainings and
@@ -153,22 +145,7 @@
                                 Marketing, Retail Marketing, International Transit and E-Commerce
                             </p>
                         </div>
-                        <div class="col-lg-4 mt-lg-0 mt-md-5 mt-sm-5 mt-5">
-                            <div class="project-info">
-                                <div class="item">
-                                    <h5>Founded:</h5>
-                                    <span>Feb 21, 2021</span>
-                                </div>
-                                <div class="item">
-                                    <h5>Founder:</h5>
-                                    <span>MR. RIFAITHEEN NAIDU</span>
-                                </div>
-                                <div class="item">
-                                    <h5>Location:</h5>
-                                    <span>Colombo, Sri Lanka</span>
-                                </div>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -179,10 +156,10 @@
     <!-- Start Footer  ============================================= -->
     <footer class="bg-dark text-light">
         <div class="container">
-            <div class="f-items default-padding">
+            <div class="f-items p-4 mb-4">
                 <div class="row">
                     <!-- Single Item -->
-                    <div class="col-lg-6 col-md-6 single-item">
+                    <div class="col-12 single-item">
                         <div class="f-item opening-hours d-lg-flex d-sm-block">
                             <!-- <h4 class="widget-title">S L B I Group</h4> -->
                             <img src="/assets/img/logo-slbi-footer.png" class="mb-3 mb-lg-0 mb-md-3" alt="">
@@ -194,55 +171,6 @@
                             </p>
                         </div>
                     </div>
-                    <!-- End Single Item -->
-                    <!-- Single Item -->
-                    <div class="col-lg-3 col-md-6 single-item">
-                        <div class="f-item link">
-                            <h4 class="widget-title">Our Projects</h4>
-                            <ul>
-                                <li>
-                                    <a href="#">Oil & Gas</a>
-                                </li>
-                                <li>
-                                    <a href="#">Chemical Research</a>
-                                </li>
-                                <li>
-                                    <a href="#">Industrial</a>
-                                </li>
-                                <li>
-                                    <a href="#">Construction</a>
-                                </li>
-                                <li>
-                                    <a href="#">Energy</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- End Single Item -->
-                    <!-- Single Item -->
-                    <div class="col-lg-3 col-md-6 single-item">
-                        <div class="f-item link">
-                            <h4 class="widget-title">Useful Links</h4>
-                            <ul>
-                                <li>
-                                    <a href="#">Latest News</a>
-                                </li>
-                                <li>
-                                    <a href="#">Careers</a>
-                                </li>
-                                <li>
-                                    <a href="#">General Inquiries</a>
-                                </li>
-                                <li>
-                                    <a href="#">Case Studies</a>
-                                </li>
-                                <li>
-                                    <a href="#">Contact Us</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- End Single Item -->
                 </div>
             </div>
         </div>
