--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
     <link href="assets/css/responsive.css" rel="stylesheet" />
     <!-- ========== End Stylesheet ========== -->
 
-
-
-
 </head>
 
 <body class="energy">
@@ -44,15 +41,7 @@
         <!-- Start Navigation -->
         <nav class="navbar navbar-default bg-dark text-light navbar-sticky bootsnav">
 
-            <div class="container-fluid">
-
-                <!-- Start Atribute Navigation -->
-                <div class="attr-nav">
-                    <ul>
-                        <li class="button"><a href="#">Login <i class="fas fa-arrow-right"></i></a></li>
-                    </ul>
-                </div>
-                <!-- End Atribute Navigation -->
+            <div class="container-fluid pr-4" style="border-bottom: 4px solid white;">
 
                 <!-- Start Header Navigation -->
                 <div class="navbar-header">
@@ -193,20 +182,15 @@
                 <div class="about-style-five col-lg-12">
 
                     <h2>Founder Message</h2>
-                    <blockquote>
+                    <p style="font-size: 18px; text-align: justify;">
                         <b>S L B I GROUP </b> is not only the number one destination in the world until world destroyed
                         but also
                         on a journey of defining 10 structures to perpetuate a series of community tasks and the company
                         is a journey that brings together all the entrepreneurs to make company employers best the
                         economy.
-                    </blockquote>
-                    <p class="founder">
-                        <span class="name"> Prof. Rifaitheen Naidu (MBA, PMP, DBA) </span>
-                        <span class="designation"> Founder </span>
-                        <span class="company"> S L B I Group</span>
                     </p>
 
-                    <a class="btn btn-dark theme btn-md">Read More</a>
+                    <a class="btn btn-dark mt-3 theme btn-md-read-more">Read More</a>
                 </div>
             </div>
         </div>
@@ -286,52 +270,24 @@
     <!-- End Investment Area -->
 
     <!-- Start Bankers Area  ============================================= -->
-    <div class="clients-area default-padding bg-dark-custom text-light">
-        <!-- Fixed Shape -->
-        <div class="fixed-shape">
-            <img src="assets/img/shape/1.png" alt="Shape">
+    <div class="default-padding">
+        <div class="bg-dark py-4 text-light text-center">
+            <h2 class="font-weight-bolder mb-0">Our Bankers</h2>
         </div>
-        <!-- End Fixed Shape -->
-        <div class="container">
-            <div class="clients-item-box">
-                <div class="row align-center">
-                    <div class="col-lg-5 left-info">
-                        <h2>Our Bankers</h2>
-
-                    </div>
-                    <div class="col-lg-6 offset-lg-1 clients-box">
-                        <div class="clients-items owl-carousel owl-theme text-center">
-                            <div class="single-item">
-                                <a href="#"><img src="assets/img/banks/1.jpg" alt="Clients"></a>
-                            </div>
-                            <div class="single-item">
-                                <a href="#"><img src="assets/img/banks/2.jpg" alt="Clients"></a>
-                            </div>
-                            <div class="single-item">
-                                <a href="#"><img src="assets/img/banks/3.jpg" alt="Clients"></a>
-                            </div>
-                            <div class="single-item">
-                                <a href="#"><img src="assets/img/banks/4.jpg" alt="Clients"></a>
-                            </div>
-                            <div class="single-item">
-                                <a href="#"><img src="assets/img/banks/5.jpg" alt="Clients"></a>
-                            </div>
-                            <div class="single-item">
-                                <a href="#"><img src="assets/img/banks/6.jpg" alt="Clients"></a>
-                            </div>
-                            <div class="single-item">
-                                <a href="#"><img src="assets/img/banks/7.jpg" alt="Clients"></a>
-                            </div>
-                            <div class="single-item">
-                                <a href="#"><img src="assets/img/banks/8.jpg" alt="Clients"></a>
-                            </div>
-                            <div class="single-item">
-                                <a href="#"><img src="assets/img/banks/9.jpg" alt="Clients"></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="d-flex justify-content-center mb-4 mt-5 container justify-content-center">
+            <div class="text-center"><img src="assets/img/banks/1.jpg" class="w-75" alt="Bank"></div>
+            <div class="text-center"><img src="assets/img/banks/2.jpg" class="w-75" alt="Bank"></div>
+            <div class="text-center"><img src="assets/img/banks/3.jpg" class="w-75" alt="Bank"></div>
+        </div>
+        <div class="d-flex justify-content-center mb-4 mt-4 container justify-content-center">
+            <div class="text-center"><img src="assets/img/banks/4.jpg" class="w-75" alt="Bank"></div>
+            <div class="text-center"><img src="assets/img/banks/5.jpg" class="w-75" alt="Bank"></div>
+            <div class="text-center"><img src="assets/img/banks/6.jpg" class="w-75" alt="Bank"></div>
+        </div>
+        <div class="d-flex justify-content-center mb-4 mt-4 container justify-content-center">
+            <div class="text-center"><img src="assets/img/banks/7.jpg" class="w-75" alt="Bank"></div>
+            <div class="text-center"><img src="assets/img/banks/8.jpg" class="w-75" alt="Bank"></div>
+            <div class="text-center"><img src="assets/img/banks/9.jpg" class="w-75" alt="Bank"></div>
         </div>
     </div>
     <!-- End Bankers Area -->
@@ -339,10 +295,10 @@
     <!-- Start Footer  ============================================= -->
     <footer class="bg-dark text-light">
         <div class="container">
-            <div class="f-items default-padding">
+            <div class="f-items p-4 mb-4">
                 <div class="row">
                     <!-- Single Item -->
-                    <div class="col-lg-6 col-md-6 single-item">
+                    <div class="col-12 single-item">
                         <div class="f-item opening-hours d-lg-flex d-sm-block">
                             <!-- <h4 class="widget-title">S L B I Group</h4> -->
                             <img src="/assets/img/logo-slbi-footer.png" class="mb-3 mb-lg-0 mb-md-3" alt="">
@@ -354,55 +310,6 @@
                             </p>
                         </div>
                     </div>
-                    <!-- End Single Item -->
-                    <!-- Single Item -->
-                    <div class="col-lg-3 col-md-6 single-item">
-                        <div class="f-item link">
-                            <h4 class="widget-title">Our Projects</h4>
-                            <ul>
-                                <li>
-                                    <a href="#">Oil & Gas</a>
-                                </li>
-                                <li>
-                                    <a href="#">Chemical Research</a>
-                                </li>
-                                <li>
-                                    <a href="#">Industrial</a>
-                                </li>
-                                <li>
-                                    <a href="#">Construction</a>
-                                </li>
-                                <li>
-                                    <a href="#">Energy</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- End Single Item -->
-                    <!-- Single Item -->
-                    <div class="col-lg-3 col-md-6 single-item">
-                        <div class="f-item link">
-                            <h4 class="widget-title">Useful Links</h4>
-                            <ul>
-                                <li>
-                                    <a href="#">Latest News</a>
-                                </li>
-                                <li>
-                                    <a href="#">Careers</a>
-                                </li>
-                                <li>
-                                    <a href="#">General Inquiries</a>
-                                </li>
-                                <li>
-                                    <a href="#">Case Studies</a>
-                                </li>
-                                <li>
-                                    <a href="#">Contact Us</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- End Single Item -->
                 </div>
             </div>
         </div>
