--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
                     <div class="site-heading text-center">
-                        <h4>Investment Area</h4>
-                        <h2>Few Reasons to Invest with Us</h2>
+                        <h2 class="font-weight-bolder mb-0" style="color: #009358;">Investment Area</h2>
+
                         <p>
                             S L B I Group of Companies has been presenting the following business programs to our
                             company for many years.
@@ -271,20 +271,20 @@
 
     <!-- Start Bankers Area  ============================================= -->
     <div class="default-padding">
-        <div class="bg-dark py-4 text-light text-center">
-            <h2 class="font-weight-bolder mb-0">Our Bankers</h2>
+        <div class=" py-4  text-center">
+            <h2 class="font-weight-bolder mb-0" style="color: #009358;">Our Bankers</h2>
         </div>
-        <div class="d-flex justify-content-center mb-4 mt-5 container justify-content-center">
-            <div class="text-center"><img src="assets/img/banks/1.jpg" class="w-75" alt="Bank"></div>
-            <div class="text-center"><img src="assets/img/banks/2.jpg" class="w-75" alt="Bank"></div>
+        <div class="d-flex justify-content-center mb-4 mt-5 container align-items-center">
+            <div class="text-center"><img src="assets/img/banks/1.jpg" class="w-50" alt="Bank"></div>
+            <div class="text-center"><img src="assets/img/banks/2.jpg" class="w-50" alt="Bank"></div>
             <div class="text-center"><img src="assets/img/banks/3.jpg" class="w-75" alt="Bank"></div>
         </div>
-        <div class="d-flex justify-content-center mb-4 mt-4 container justify-content-center">
+        <div class="d-flex justify-content-center mb-4 mt-4 container align-items-center">
             <div class="text-center"><img src="assets/img/banks/4.jpg" class="w-75" alt="Bank"></div>
-            <div class="text-center"><img src="assets/img/banks/5.jpg" class="w-75" alt="Bank"></div>
+            <div class="text-center"><img src="assets/img/banks/5.jpg" class="w-50" alt="Bank"></div>
             <div class="text-center"><img src="assets/img/banks/6.jpg" class="w-75" alt="Bank"></div>
         </div>
-        <div class="d-flex justify-content-center mb-4 mt-4 container justify-content-center">
+        <div class="d-flex justify-content-center mb-4 mt-4 container align-items-center">
             <div class="text-center"><img src="assets/img/banks/7.jpg" class="w-75" alt="Bank"></div>
             <div class="text-center"><img src="assets/img/banks/8.jpg" class="w-75" alt="Bank"></div>
             <div class="text-center"><img src="assets/img/banks/9.jpg" class="w-75" alt="Bank"></div>
@@ -298,7 +298,7 @@
             <div class="f-items p-4 mb-4">
                 <div class="row">
                     <!-- Single Item -->
-                    <div class="col-12 single-item">
+                    <div class="col-6 single-item">
                         <div class="f-item opening-hours d-lg-flex d-sm-block">
                             <!-- <h4 class="widget-title">S L B I Group</h4> -->
                             <img src="/assets/img/logo-slbi-footer.png" class="mb-3 mb-lg-0 mb-md-3" alt="">
