home changed with boots

--- a/aboutus.html
+++ b/aboutus.html
@@ -16,7 +16,10 @@
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
     <!-- ========== Start Stylesheet ========== -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet" /> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
     <link href="assets/css/icofont.min.css" rel="stylesheet" />
     <link href="assets/css/themify-icons.css" rel="stylesheet" />
@@ -108,48 +111,36 @@
     <!-- End Breadcrumb -->
 
     <!-- Start Services Details ============================================= -->
-    <div class="project-details-area default-padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 content">
-                    <div class="row">
+    <div class="container py-4">
 
-
-                        <div class="col-12">
-                            <h2>Overview</h2>
-                            <p class="text-justify">
-                                S L B I GROUP has become the largest Industrial Campus, Courses &amp; Trainings and
-                                Manufacturing Products &amp; Services, Export, Import, Supermarkets &amp; Shopping
-                                Malls, Wholesale
-                                Marketing, Retail Marketing, International Transit and E-Commerce in the world in just a
-                                few
-                                years and barely. Anyone expected it to be so successful. It has provided numerous
-                                business
-                                opportunities for small and medium. Enterprises to leverage the innovative technology to
-                                compete more efficiently domestically and globally. This study does not attempt to
-                                describe S L
-                                B I GROUP as a perfect business; rather it discuss the marketing strategies, promotion,
-                                distribution channels and some important lessons that were carried out by Founder MR.
-                                RIFAITHEEN NAIDU to achieve success in this. Complex world of manufacturing and trading,
-                                in this literature review, we examine a few key factors of S L B I GROUP’s success such
-                                as its
-                                specific marketing strategies, various challenges, its strong branding image, superior
-                                customer
-                                value, proposition, better shopping experience, huge sales volume and economies of
-                                scale.
-                            </p>
-                            <p class="text-justify">
-                                S L B I GROUP’s vision is to digitize the Industrial Campus, Courses &amp; Trainings and
-                                Manufacturing Products &amp; Services, Export, Import, Supermarkets &amp; Shopping
-                                Malls, Wholesale
-                                Marketing, Retail Marketing, International Transit and E-Commerce
-                            </p>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
+        <h1 class="fw-bolder text-success text-center">Overview</h1>
+        <p class="text-justify">
+            S L B I GROUP has become the largest Industrial Campus, Courses &amp; Trainings and
+            Manufacturing Products &amp; Services, Export, Import, Supermarkets &amp; Shopping
+            Malls, Wholesale
+            Marketing, Retail Marketing, International Transit and E-Commerce in the world in just a
+            few
+            years and barely. Anyone expected it to be so successful. It has provided numerous
+            business
+            opportunities for small and medium. Enterprises to leverage the innovative technology to
+            compete more efficiently domestically and globally. This study does not attempt to
+            describe S L
+            B I GROUP as a perfect business; rather it discuss the marketing strategies, promotion,
+            distribution channels and some important lessons that were carried out by Founder MR.
+            RIFAITHEEN NAIDU to achieve success in this. Complex world of manufacturing and trading,
+            in this literature review, we examine a few key factors of S L B I GROUP’s success such
+            as its
+            specific marketing strategies, various challenges, its strong branding image, superior
+            customer
+            value, proposition, better shopping experience, huge sales volume and economies of
+            scale.
+        </p>
+        <p class="text-justify">
+            S L B I GROUP’s vision is to digitize the Industrial Campus, Courses &amp; Trainings and
+            Manufacturing Products &amp; Services, Export, Import, Supermarkets &amp; Shopping
+            Malls, Wholesale
+            Marketing, Retail Marketing, International Transit and E-Commerce
+        </p>
     </div>
     <!-- End Services Details -->
 
@@ -159,7 +150,7 @@
             <div class="f-items p-4 mb-4">
                 <div class="row">
                     <!-- Single Item -->
-                    <div class="col-6 single-item">
+                    <div class="col-lg-6 single-item">
                         <div class="f-item opening-hours d-lg-flex d-sm-block">
                             <!-- <h4 class="widget-title">S L B I Group</h4> -->
                             <img src="/assets/img/logo-slbi-footer.png" class="mb-3 mb-lg-0 mb-md-3" alt="">
