--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
     <!-- ========== Start Stylesheet ========== -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet" /> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
     <link href="assets/css/icofont.min.css" rel="stylesheet" />
     <link href="assets/css/themify-icons.css" rel="stylesheet" />
@@ -32,7 +34,7 @@
 
 </head>
 
-<body class="energy">
+<body>
 
     <!-- Header 
     ============================================= -->
@@ -41,7 +43,7 @@
         <!-- Start Navigation -->
         <nav class="navbar navbar-default bg-dark text-light navbar-sticky bootsnav">
 
-            <div class="container-fluid pr-4" style="border-bottom: 4px solid white;">
+            <div class="container-fluid" style="border-bottom: 4px solid white;">
 
                 <!-- Start Header Navigation -->
                 <div class="navbar-header">
@@ -175,122 +177,118 @@
     </div>
     <!-- End Banner -->
 
-    <!-- Start Founder Message ============================================= -->
-    <div class="about-style-five-area default-padding">
-        <div class="container">
-            <div class="row">
-                <div class="about-style-five col-lg-12">
-
-                    <h2>Founder Message</h2>
-                    <p style="font-size: 18px; text-align: justify;">
-                        <b>S L B I GROUP </b> is not only the number one destination in the world until world destroyed
-                        but also
-                        on a journey of defining 10 structures to perpetuate a series of community tasks and the company
-                        is a journey that brings together all the entrepreneurs to make company employers best the
-                        economy.
-                    </p>
-
-                    <a class="btn btn-dark mt-3 theme btn-md-read-more">Read More</a>
-                </div>
-            </div>
-        </div>
+    <!-- Start Founder Message -->
+    <div class="container py-5">
+        <h1 class="fw-bolder">Founder Message</h1>
+        <p class="fs-5 text-justify">
+            S L B I GROUP is not only the number one destination in the world until world destroyed but also on a
+            journey of defining 10 structures to perpetuate a series of community tasks and the company is a journey
+            that brings together all the entrepreneurs to make company employers best the economy.
+        </p>
+        <a href="#" class="text-muted fs-5 read-more fst-italic">Read More...</a>
     </div>
     <!-- End Founder Message -->
 
-    <!-- Start Investment Area   ============================================= -->
-    <div class="services-style-six-area bg-gray default-padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 offset-lg-2">
-                    <div class="site-heading text-center">
-                        <h2 class="font-weight-bolder mb-0" style="color: #009358;">Investment Area</h2>
+    <!-- Investment Area -->
+    <div class="bg-gray p-2 text-dark bg-opacity-10">
+        <div class="container py-5 text-center ">
+            <h1 class="fw-bolder text-success">Investment Area</h1>
+            <p class="fs-4">Few Reasons To Invest With Us</p>
+            <p class="fs-5 mb-5">
+                S L B I Group of Companies has been presenting the following business programs to our company for many
+                years.
+            </p>
+            <div class="row row-cols-1 row-cols-md-3 g-3">
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/img/invest/invest-1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body overlay">
+                            <a href="#" class="card-text fs-5 text-light">
+                                Starting private industrial Campus and starting hundreds of factories.
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/img/invest/invest-2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body overlay">
+                            <a href="#" class="card-text fs-5 text-light">
+                                Starting Super Markets and Shopping Mall in Sri Lanka
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/img/invest/invest-3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body overlay">
+                            <a href="#" class="card-text fs-5 text-light">
+                                To set up large scale dairy farms
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/img/invest/invest-4.jpg" class="card-img-top" alt="...">
+                        <div class="card-body overlay">
+                            <a href="#" class="card-text fs-5 text-light">
+                                To set up solar power plants and supply electricity to the state
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/img/invest/invest-5.jpg" class="card-img-top" alt="...">
+                        <div class="card-body overlay">
+                            <a href="#" class="card-text fs-5 text-light">
+                                Establishment of Hotel and Resorts to start businesses in the tourism sector.
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/img/invest/invest-6.jpg" class="card-img-top" alt="...">
+                        <div class="card-body overlay">
+                            <a href="#" class="card-text fs-5 text-light">
+                                Starting Private Banking Services is to provide public with financial services.
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
-                        <p>
-                            S L B I Group of Companies has been presenting the following business programs to our
-                            company for many years.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container-full">
-            <div class="services-style-six-box text-light bg-cover">
-                <div class="row">
-                    <!-- Single Item  -->
-                    <div class="services-style-six col-lg-4 col-md-6"
-                        style="background-image: url(assets/img/invest/invest-1.jpg);">
-                        <div class="item">
-                            <h4><a href="#"> Starting private industrial Campus and starting hundreds of factories</a>
-                            </h4>
-                            <a href="#"><i class="fas fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                    <!-- End Single Item  -->
-                    <!-- Single Item  -->
-                    <div class="services-style-six col-lg-4 col-md-6"
-                        style="background-image: url(assets/img/invest/invest-2.jpg);">
-                        <div class="item">
-                            <h4><a href="#">Starting Super Markets and Shopping Mall in Sri Lanka </a></h4>
-                            <a href="#"><i class="fas fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                    <!-- End Single Item  -->
-                    <!-- Single Item  -->
-                    <div class="services-style-six col-lg-4 col-md-6"
-                        style="background-image: url(assets/img/invest/invest-3.jpg);">
-                        <div class="item">
-                            <h4><a href="#">To set up large scale dairy farms </a></h4>
-                            <a href="#"><i class="fas fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                    <!-- End Single Item  -->
-                    <!-- Single Item  -->
-                    <div class="services-style-six col-lg-4 col-md-6"
-                        style="background-image: url(assets/img/invest/invest-4.jpg);">
-                        <div class="item">
-                            <h4><a href="#">To set up solar power plants and supply electricity to the state </a></h4>
-                            <a href="#"><i class="fas fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                    <!-- End Single Item  -->
-                    <!-- Single Item  -->
-                    <div class="services-style-six col-lg-4 col-md-6"
-                        style="background-image: url(assets/img/invest/invest-5.jpg);">
-                        <div class="item">
-                            <h4><a href="#">Establishment of Hotel and Resorts to start businesses in the tourism
-                                    sector.</a></h4>
-                            <a href="#"><i class="fas fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                    <!-- End Single Item  -->
-                </div>
             </div>
         </div>
     </div>
     <!-- End Investment Area -->
 
-    <!-- Start Bankers Area  ============================================= -->
-    <div class="default-padding">
-        <div class=" py-4  text-center">
-            <h2 class="font-weight-bolder mb-0" style="color: #009358;">Our Bankers</h2>
+    <!-- Our Bankers -->
+    <div class="container py-5">
+        <h1 class="fw-bolder text-success text-center">Our Bankers</h1>
+        <div class="row mb-4">
+            <div class="col-4"><img src="assets/img/banks/1.jpg" alt="..."></div>
+            <div class="col-4"><img src="assets/img/banks/2.jpg" alt="..."></div>
+            <div class="col-4"><img src="assets/img/banks/3.jpg" alt="..."></div>
         </div>
-        <div class="d-flex justify-content-center mb-4 mt-5 container align-items-center">
-            <div class="text-center"><img src="assets/img/banks/1.jpg" class="w-50" alt="Bank"></div>
-            <div class="text-center"><img src="assets/img/banks/2.jpg" class="w-50" alt="Bank"></div>
-            <div class="text-center"><img src="assets/img/banks/3.jpg" class="w-75" alt="Bank"></div>
+        <div class="row mb-4">
+            <div class="col-4"><img src="assets/img/banks/4.jpg" alt="..."></div>
+            <div class="col-4"><img src="assets/img/banks/5.jpg" alt="..."></div>
+            <div class="col-4"><img src="assets/img/banks/6.jpg" alt="..."></div>
         </div>
-        <div class="d-flex justify-content-center mb-4 mt-4 container align-items-center">
-            <div class="text-center"><img src="assets/img/banks/4.jpg" class="w-75" alt="Bank"></div>
-            <div class="text-center"><img src="assets/img/banks/5.jpg" class="w-50" alt="Bank"></div>
-            <div class="text-center"><img src="assets/img/banks/6.jpg" class="w-75" alt="Bank"></div>
-        </div>
-        <div class="d-flex justify-content-center mb-4 mt-4 container align-items-center">
-            <div class="text-center"><img src="assets/img/banks/7.jpg" class="w-75" alt="Bank"></div>
-            <div class="text-center"><img src="assets/img/banks/8.jpg" class="w-75" alt="Bank"></div>
-            <div class="text-center"><img src="assets/img/banks/9.jpg" class="w-75" alt="Bank"></div>
+        <div class="row">
+            <div class="col-4"><img src="assets/img/banks/7.jpg" alt="..."></div>
+            <div class="col-4"><img src="assets/img/banks/8.jpg" alt="..."></div>
+            <div class="col-4"><img src="assets/img/banks/9.jpg" alt="..."></div>
         </div>
     </div>
-    <!-- End Bankers Area -->
+    <!-- Our Bankers -->
+
+
+
+
 
     <!-- Start Footer  ============================================= -->
     <footer class="bg-dark text-light">
@@ -298,7 +296,7 @@
             <div class="f-items p-4 mb-4">
                 <div class="row">
                     <!-- Single Item -->
-                    <div class="col-6 single-item">
+                    <div class="col-lg-6 single-item">
                         <div class="f-item opening-hours d-lg-flex d-sm-block">
                             <!-- <h4 class="widget-title">S L B I Group</h4> -->
                             <img src="/assets/img/logo-slbi-footer.png" class="mb-3 mb-lg-0 mb-md-3" alt="">
