contact page updated

--- a/aboutus.html
+++ b/aboutus.html
@@ -39,7 +39,7 @@
     <!-- Start Navigation -->
     <nav class="navbar navbar-default bg-dark text-light navbar-sticky bootsnav">
 
-        <div class="container-fluid pr-4" style="border-bottom: 4px solid white;">
+        <div class="container-fluid" style="border-bottom: 4px solid white;">
 
             <!-- Start Header Navigation -->
             <div class="navbar-header">
@@ -84,7 +84,7 @@
 
                     </li>
                     <li>
-                        <a href="#">Contact Us</a>
+                        <a href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
