--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                         </li>
                         <li>
-                            <a href="#">Contact Us</a>
+                            <a href="contact.html">Contact Us</a>
                         </li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
