--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
     <div class="container py-4">
         <h1 class="fw-bolder text-success text-center">Contact Us</h1>
         <p class="fs-5 text-justify mb-4">
-            Please let us know if you have q question, want to leave a comment, or would like further information
+            Please let us know if you have any question, want to leave a comment, or would like further information
             about S L B I Group
         </p>
 
@@ -139,7 +139,7 @@
             </div>
             <div class="col-12 col-lg-6 col-md-6 ">
                 <img width="275" src="assets/img/contact/sl.jpg" class="img-fluid lanka mb-4" alt="...">
-                <p class="fs-4 fw-bold">S L B I Group (Pvt) LtdC</p>
+                <p class="fs-4 fw-bold">S L B I Group (Pvt) Ltd</p>
                 <p>
                     No. 563/2, Hajiyar Road,<br>
                     Nintavur-05, <br>
