--- a/contact.html
+++ b/contact.html
@@ -144,9 +144,9 @@
                     No. 563/2, Hajiyar Road,<br>
                     Nintavur-05, <br>
                     Sri Lanka <br>
-                    Tel: +94 67 31 31 931 <br>
+                    Tel: <span style="visibility: hidden;">'</span> +94 67 31 31 931 <br>
                     Mob: +94 777 17 29 49 <br>
-                    +94 777 00 22 92 <br>
+                    &nbsp; &nbsp; &nbsp; <span style="visibility: hidden;">''</span> +94 760 99 91 31 <br>
                     E-mail: <a href="mailto:info@slbigroup.com">info@slbigroup.com</a>
                 </p>
             </div>
@@ -155,15 +155,6 @@
     <!-- End Contact Area -->
 
 
-    <!-- Start Google Maps 
-    ============================================= -->
-    <!-- <div class="maps-area">
-        <div class="google-maps">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d14767.262289338461!2d70.79414485000001!3d22.284975!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1424308883981"></iframe>
-        </div>
-    </div> -->
-    <!-- End Google Maps -->
 
 
     <!-- Start Footer  ============================================= -->
